--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                  </div>
                  <div class="person">
                     <h3>WESLEY</h3>
-                     <img class="foto" src="img/social/foto-exemplo.png" alt="foto">
+                     <img class="foto" src="img/social/EU.jpg" alt="foto">
                      <div class="social">
                         <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px" onclick="click()">
                         <img src="img/social/github.png" alt="github" width="30px" height="30px"  onclick="click()">
